front-end/manifest/Vault.Portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-portal
  labels:
    app: vault-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-portal
  template:
    metadata:
      labels:
        app: vault-portal
    spec:
      containers:
        - name: vault-portal
          image: robadrinacr1.azurecr.io/vault-portal:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: vault-portal-service
spec:
  selector:
    app: vault-portal
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
