front-end/manifest/Vault.Portal.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-portal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-portal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "1g" # Set maximum allowed size for client request body to 1GB
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k" # Set the buffer size for reading client request body
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Cache-Control "max-age=0, no-cache, no-store, must-revalidate";
spec:
  rules:
    - http:
        paths:
          - path: /vault/app
            pathType: Prefix
            backend:
              service:
                name: vault-portal-service
                port:
                  number: 8081

    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Cache-Control "max-age=0, no-cache, no-store, must-revalidate";
spec:
  rules:
    - http:
        paths:
          - path: /vault/app
            pathType: Prefix
            backend:
              service:
                name: vault-portal-service
                port:
                  number: 8081
